<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile">

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="146dp"
        android:layout_height="146dp"
        android:contentDescription="@string/imgProfile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/tvnomProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:text="@string/nombreCompletoProfile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivProfile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/tvNomVariable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/ivProfile"
        app:layout_constraintTop_toBottomOf="@+id/tvnomProfile" />

    <TextView
        android:id="@+id/tvCorreoProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/CorreoProfile"
        app:layout_constraintStart_toEndOf="@+id/ivProfile"
        app:layout_constraintTop_toBottomOf="@+id/tvNomVariable" />

    <TextView
        android:id="@+id/tvCorreoVariable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/ivProfile"
        app:layout_constraintTop_toBottomOf="@+id/tvCorreoProfile" />

    <TextView
        android:id="@+id/tvTelefonoProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/telefonosProfile"
        app:layout_constraintStart_toEndOf="@+id/ivProfile"
        app:layout_constraintTop_toBottomOf="@+id/tvCorreoVariable" />

    <TextView
        android:id="@+id/tvTelefonoVariable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/ivProfile"
        app:layout_constraintTop_toBottomOf="@+id/tvTelefonoProfile" />

</androidx.constraintlayout.widget.ConstraintLayout>